# utmsdai-disertation

./: pyproject.toml
src/: main.py
