[project]
name = "utmsdai-disertation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.6.0",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "quarto-cli>=1.9.38",
]

